# Workbench

./: .gitignore  README.md  docker-compose.yml  package-lock.json  package.json
infra/: auto_update.bat  auto_update.sh  build_all.bat  build_all.sh  docker-compose.yml  initialize_system.bat  initialize_system.sh  reset_and_bootstrap.bat  reset_and_bootstrap.sh  start_all.bat  start_all.sh  start_gateway_stdio.bat  start_gateway_stdio.sh  start_native.bat  start_native.sh  start_native_release.bat  start_services.bat  start_services.sh  start_tunnel.bat  start_tunnel.sh  start_web.bat  start_web.sh
infra/env_samples/: .env.edge.example  artifacts.env.example  core.env.example  tasks.env.example
infra/scripts/: e2e-api.mjs
native/desktop/: .env.example  package.json
native/desktop/scripts/: prepare-tauri-config.mjs
native/desktop/src-tauri/: Cargo.toml
native/desktop/src-tauri/src/: lib.rs  main.rs
services/artifacts/: .env.example  package.json
services/artifacts/data/: artifacts.json
services/artifacts/src/: artifactItemsStore.ts  db.ts  httpServer.ts  store.ts  types.ts
services/notes/: .env.example  package.json
services/notes/data/: notes.json
services/notes/src/: auth.ts  db.ts  httpServer.ts  store.ts  types.ts
services/projects/: .env.example  package.json
services/projects/src/: db.ts  (+3 more)
services/tasks/: .env.example  package.json
services/workbench-core/: .env.example  package.json
ui/: .env.example  index.html  package.json  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
ui/src/: App.tsx  main.tsx  styles.css  vite-env.d.ts
(+72 files in other folders)
