[package]
name = "workbench-native"
version = "0.1.0"
description = "Workbench Native Desktop"
authors = ["Workbench Team"]
license = "MIT"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "workbench_native_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
windows-sys = { version = "0.59", features = ["Win32_Foundation", "Win32_Security_Credentials"] }
tauri-plugin-global-shortcut = { version = "2", features = [] }
